regsitration revamp | home revamp | cutoff issue fixed

--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,9 @@ input[type="color"],
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+.form-group-inline{
+	display: inline-block;
+}
 .form-group{ margin:0 0 20px;}
 .form-control::-moz-placeholder{
 	text-transform: capitalize;
@@ -1508,7 +1511,12 @@ address { font-style: italic; }
 }
 
 .tg-slider-logo{
-	height: 80px;
+	height: 60px;
+}
+.tg-slider-logo-main{
+	height: 100px;
+	padding-bottom: 5px;
+	margin-top: -10px;
 }
 
 .tg-sliderbox .tg-imglayer{
