--- a/css/responsive.css
+++ b/css/responsive.css
@@ -449,6 +449,10 @@
 		height: 40px;
 	}
 
+	.tg-slider-logo-main{
+		height: 70px;
+	}
+
 	/* Map image */
 	.map-image{
 		height: 390px;
